# Autonomous-Test-Engineering-Platform

./: .env.example  .gitignore  DEMO_RUNBOOK.md  DEMO_SUMMARY.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: router.py
app/core/: settings.py
automation_engineering/: README.md
docs/: EIOS-REPOSITORY-AUDIT-implementation-baseline.md  coding-standards.md  naming-conventions.md
docs/adr/: 0001-modular-monolith.md  0002-normalization-framework-vs-component-boundary.md  0003-validation-input-and-normalization-handoff.md  0004-schema-vs-structural-ownership-boundary.md  0005-schema-enumeration-deferral.md  0006-remaining-validation-capability-status.md  0007-duplicate-requirement-scope.md  0008-reasoning-duplicate-comparison-mechanism.md  0009-contradiction-judgement-mechanism.md  0010-circular-logic-judgement-mechanism.md  0011-cp1-engine-and-validation-cp1-handoff.md  0012-engineering-readiness-criteria-catalog.md  0013-cp1-0001-engineering-input-availability.md  0013-cp1-0001-requirement-presence.md  0014-prompt-governance-subsystem.md  0015-engineering-context-orchestration-model-and-policy.md  0016-evidence-grounding-and-traceability.md  0017-quality-governance-framework.md  0018-requirement-enhancement-framework.md  0019-recommendation-framework.md  0020-platform-evolution-roadmap.md  0021-cross-execution-data-architecture.md  0022-continuous-improvement-framework.md  0023-knowledge-graph-framework.md  0024-historical-dataset-architecture.md  0025-derived-knowledge-architecture.md  0026-organizational-knowledge-architecture.md  0027-organizational-memory-framework.md  0028-learning-constitution.md  0029-learning-framework.md  0030-executable-specification-engineering.md
docs/architecture/: ACT-001-Architecture-Action-Execution-Record-v2.md  ACT-001-Architecture-Action-Execution-Record.md  ACT-001-Architecture-Review-Board-Decision-Record.md  ACT-001-Decision-Review-Package.md  ACT-001-Governance-Designation-Record.md  (+19 more)
execution/: README.md
failure_intelligence/: README.md
feature_engineering/: README.md
governance_dashboard/: README.md  app.py
prompts/: README.md
quality_governance/: README.md
scripts/: bootstrap.sh  run_requirement_analysis.py
tests/: conftest.py
(+741 files in other folders)
